# django-request-logging

./: README.md  pyproject.toml  runtests.py
request_logging/: admin.py  middlewares.py  models.py
request_logging/management/commands/: remove_old_request_log.py
request_logging/migrations/: 0003_requestlog_options_and_indexes.py
tests/: test_cleanup_command.py  test_get_ip_client.py  test_middleware.py
