[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-request-logging"
version = "1.4"
description = "Log request info to database"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Cuong Nguyen", email = "cuongnb14@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "Django>=4.0",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/cuongnb14/django-request-logging"

[tool.setuptools.packages.find]
include = ["request_logging*"]
